k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
spec:
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp
        image: rampss/argocd:latest
        ports:
        - containerPort: 8080
